# Coroutines

./: CMakeLists.txt  README.md  coroworker.cpp
common/: assingleton.hpp  worker.hpp
